deployments/ingress/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: example
    namespace: foo
  spec:
    ingressClassName: nginx
    rules:
      - host: www.example.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: exampleService
                  port:
                    number: 80
              path: /
    # This section is only required if TLS is to be enabled for the Ingress
#    tls:
 #     - hosts:
  #      - www.example.com
  #     secretName: example-tls

  #apiVersion: v1
  #kind: Secret
  #metadata:
  #  name: example-tls
   # namespace: foo
  #data:
   # tls.crt: <base64 encoded cert>
    #tls.key: <base64 encoded key>
 # type: kubernetes.io/tls
